Towns retry v3